Edit form display from block to flex to prevent right column from stretching viewport
Put labels inside form inputs

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ form {
     padding: 1.5rem;
 }
 
-form ul {
+.field {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -66,22 +66,28 @@ form ul {
     box-shadow: 5px 7px 9px 7px #915a2247;
 }
 
-form li {
+.field-input {
     display: flex;
+    position: relative;
     flex-direction: column;
     list-style: none;
     gap: 5px;
 }
 
 label {
-    font-size: 2vh;
+    position: absolute;
+    font-size: 1.1em;
     width: 11vw;
+    padding: .5em;
+    font-variant: all-small-caps;
 }
 
 input {
-    height: 3vh;
+    height: 2.5em;
+    width: 15em;
     border: 1px solid #915a2299;
     border-radius: .2em;
+    background-color: #603e0024;
 }
 
 button {
@@ -128,8 +134,13 @@ button {
         margin: 0 3vw;
     }
 
-    form ul {
+    .field {
         box-shadow: 0px 0px 9px 7px #915a2247;
+        justify-content: center;
+    }
+
+    input {
+        width: 13.5em;
     }
 
     label {
